--- a/cover.css
+++ b/cover.css
@@ -73,7 +73,7 @@ img {
     font-family: sans-serif;
     padding: 0.8em;
     margin: 0.5em;
-    display: none;
+    /* display: none; */
 }
 
 @media print {
@@ -219,5 +219,70 @@ canvas {
   position: absolute;
   top: 0;
   z-index: 2;
+}
+
+
+.w3-light-grey, .w3-hover-light-grey:hover, .w3-light-gray, .w3-hover-light-gray:hover {
+    color: #000!important;
+    background-color: #f1f1f1!important;
+}
+.w3-border-bottom {
+    border-bottom: 1px solid #ccc!important;
+}
+.w3-bar {
+    width: 100%;
+    overflow: hidden;
+}
+
+.w3-border {
+    border: 1px solid #ccc!important;
+}
+
+.w3-bar .w3-button {
+    white-space: normal;
+}
+.w3-bar .w3-bar-item {
+    padding: 8px 16px;
+    float: left;
+    width: auto;
+    border: none;
+    display: block;
+    outline: 0;
+}
+.w3-dark-grey, .w3-hover-dark-grey:hover, .w3-dark-gray, .w3-hover-dark-gray:hover {
+    color: #fff!important;
+    background-color: #616161!important;
+}
+
+.w3-btn, .w3-button {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.w3-btn, .w3-button {
+    border: none;
+    display: inline-block;
+    padding: 8px 16px;
+    vertical-align: middle;
+    overflow: hidden;
+    text-decoration: none;
+    color: inherit;
+    background-color: inherit;
+    text-align: center;
+    cursor: pointer;
+    white-space: nowrap;
+}
+
+.w3-button:hover {
+    color: #000!important;
+    background-color: #ccc!important;
+}
+
+.w3-red,.w3-hover-red:hover {
+    color: #fff!important;
+    background-color: #f44336!important
 }
 
