add sidenote, uppernote, show title and pages

--- a/_layouts/book_cover.html
+++ b/_layouts/book_cover.html
@@ -12,11 +12,13 @@
 body {
   box-sizing: border-box;
 }
+
 .all {
+  clear: both;
   width: fit-content;
+  padding: 0;
+  border: lightgrey solid thin;
   height: {{ page.height }};
-  /* position: absolute; */
-  /* float: left; */
 }
 
 .face {
@@ -25,28 +27,28 @@ body {
   overflow: hidden;
   box-sizing: border-box;
   float: left;
-  border: grey 1px dashed;
-  background: {{page.back.background | default: "white" }};
+  /* border: grey 1px dashed; */
 }
 
+{% assign thickness=page.pages | divided_by: 444.0 | plus: 0.06 %}
 .center {
   {% if page.pages %}
-  width: {{ page.pages | divided_by: 444.0 | plus: 0.06}}in;
-  line-height: {{ page.pages | divided_by: 444.0 | plus: 0.06}}in;
+  width: {{ thickness }}in;
+  line-height: {{ thickness }}in;
   {% else %}
   width: {{page.thickness}};
   line-height: {{page.line_height | default: "2cm"}};
   {% endif %}
   height: 100%;
-  font-size: {{page.font.size | default: "15mm"}};
-  font-family: "{{page.font.family | default: "serif"}}";
-  color: {{page.color | default: "white"}};
-  background: {{page.background | default: "#E21D3C" }};
+  font-size: {{ page.font.size | default: "15mm" }};
+  font-family: "{{ page.font.family | default: "serif" }}";
+  color: {{ page.color | default: "white" }};
+  background: {{ page.background | default: "#E21D3C" }};
   text-align: center;
   vertical-align: middle;
   writing-mode: vertical-rl;
   float: left;
-  border-top: grey thin dashed;
+  /* border-top: grey thin dashed; */
 }
 
 img {
@@ -55,20 +57,24 @@ img {
     max-height: 100%;
 }
 
+#front {
+  background: {{page.front.background | default: "white" }};  
+}
+
 #back {
 {% if page.back.img %}
   padding: 0;
 {% else %}
-  line-height: {{page.back.line_height | default: "1.5em"}};
-  font-family: "{{page.back.family | default: "serif"}}";
-  font-size: {{page.back.size | default: "12pt"}};
-  color: {{page.back.color | default: "black"}};
-  background: {{page.back.background | default: "white" }};
+  line-height: {{ page.back.line_height | default: "1.5em" }};
+  font-family: "{{ page.back.family | default: "serif" }}";
+  font-size: {{ page.back.size | default: "12pt" }};
+  color: {{ page.back.color | default: "black" }};
   padding: 1in;
 {% endif %}
+  background: {{page.back.background | default: "white" }};
 }
 
-div#rules {
+.rules {
   box-sizing: border-box;
   padding-top: 1mm;
   width: fit-content;
@@ -76,38 +82,49 @@ div#rules {
 
 .face-rule {
   box-sizing: border-box;
+  float: left;
   border-left: solid red thin;
   border-right: solid red thin;
+  height: 0.5cm;
+  text-align: center;
   width: {{ page.width }};
-  height: 1cm;
-  float: left;
 }
 
 .center-rule {
-  width: {{ page.pages | divided_by: 444.0 | plus: 0.06 | divided_by: 2}}in;
-  float: left;
-  height: 1cm;
   box-sizing: border-box;
+  float: left;
+  height: 0.5cm;
+  width: calc({{ thickness | divided_by: 2 }}in - 1px);
 }
-
-@media print {
-  .face, .center {
-    border: none
-  }
-  .all {
-    padding: 0;
-    border: lightgrey solid thin;
-  }
+div#siderule {
+    box-sizing: border-box;
+    border-top: solid blue thin;
+    border-bottom: solid blue thin;
+    float: left;
+    height: 100%;
+    width: 5em;
+    margin-left: 2mm;
+    line-height: {{page.height}};
 }
 </style>
 
 <title>{{page.title | strip_html}}</title>
 </head>
 <body>
+<div class="rules">
+  <div class="face-rule">
+    {{ page.width }}
+  </div>
+  <div class="center-rule" style="border-right: solid thin;">&nbsp;</div>
+  <div class="center-rule" style="border-left: solid thin;">&nbsp;</div>
+  <div class="face-rule">
+    {{ page.width }}
+  </div>
+</div>
 <div class="all" id="todo">
   <div class="face" id="back">
     {% if page.back.img %}
-    <img src="../{{page.back.img}}" alt="">
+    <img src="..{{page.back.img}}" alt="">
     {% endif %}
     {{content}}
   </div>
@@ -116,21 +133,22 @@ div#rules {
   </div>
   <div class="face" id="front">
     {% if page.front.img %}
-    <img src="../{{page.front.img}}" alt="">
+    <img src="..{{page.front.img}}" alt="">
     {% else %}
-    <h1>{{title}}</h1>
-    <h2>{{author}}</h2>
+    <h1>{{page.title}}</h1>
+    <h2>{{page.author}}</h2>
     {% endif %}
   </div>
+  <div id="siderule">{{page.height}}</div>
 </div>
-<div id="rules">
+<div class="rules">
   <div class="face-rule">
-    {{ page.width }}
+    {{ page.width }}<br/>{{page.title}}
   </div>
   <div class="center-rule" style="border-right: solid thin;">&nbsp;</div>
   <div class="center-rule" style="border-left: solid thin;">&nbsp;</div>
   <div class="face-rule">
-    {{ page.width }}
+    {{ page.width }}<br/>{{page.pages}} pages
   </div>
 </div>
 </body>
