--- a/_layouts/book_cover.html
+++ b/_layouts/book_cover.html
@@ -13,37 +13,29 @@ body {
   /* box-sizing: border-box; */
 }
 
-.all {
-  /* clear: both; */
-  /* border: lightgrey solid thin; */
-  /* width: fit-content; */
-  padding: 0;
-  /* float: left; */
-  height: {{ page.height }};
+#covers {
 }
 
 .face {
-  height: 100%;
+  /* height: 100%; */
   overflow: hidden;
-  box-sizing: border-box;
+  box-sizing: content-box;
   /* float: left; */
   /* border: grey 1px dashed; */
   width: {{ page.width }};
+  height: {{ page.height }};
 }
 
 table {
   border-spacing: 0;
+  border-collapse: collapse;
 }
 
 {% assign thickness=page.pages | divided_by: 444.0 | plus: 0.06 -%}
+{% assign depth = thickness | append: "in" -%}
 .center {
-  /* display: table; */
-  /* text-align: center; */
-  /* vertical-align: middle; */
-  /* writing-mode: vertical-rl; */
-  /* float: left; */
-  /* height: 100%; */
-  /* border-top: grey thin dashed; */
+  padding: 0;
+  border-top: grey thin dashed;
   {% if page.pages %}
   width: {{ thickness }}in;
   line-height: {{ thickness }}in;
@@ -51,16 +43,13 @@ table {
   width: {{page.thickness}};
   line-height: {{page.line_height | default: "2cm"}};
   {% endif %}
-  font-size: {{ page.font.size | default: "15mm" }};
-  font-family: "{{ page.font.family | default: "serif" }}";
-  color: {{ page.color | default: "white" }};
   background: {{ page.background | default: "#E21D3C" }};
 }
 
 .face img {
     /* border: blue solid thin; */
-    max-width: 100%;
-    height: {{page.height}};
+    width: 100%;
+    height: 100%;
 }
 
 #front {
@@ -124,38 +113,80 @@ table {
     height: {{page.height}};
 }
 
-#title {
-    /* max-height: 74%; */
-    /* display: table-cell; */
-    display: block;
-    writing-mode: vertical-lr;
-    height: calc(23.34cm - 2.6in);
+.center td {
+    display: block;  
 }
-#auth {
-  display: block;
-  font-size: initial;
-  font-family: serif;
-  line-height: 1em;
-  height: 1.7in;
-  text-align: right;
-  padding-bottom: 3mm;
-  /* margin-right: 0mm; */
-  writing-mode: vertical-rl;
-  width: 80%;
-  vertical-align: middle;
-  /* border: solid thin yellow; */
+
+#head {
+  box-sizing: border-box;
+  width: {{ page.head.width | default: depth }};
+  height: {{ page.head.height | default: "auto" }};
+  background: {{ page.head.bg | default: "initial" }};
+  writing-mode: {{ page.head.writing_mode | default: "initial" }};
+  font-size: {{ page.head.font.size | default: "initial" }};
+  font-family: "{{ page.head.font.family | default: "serif" }}";
+  color: {{ page.head.color | default: "white" }};  
+  border: {{page.head.border | default: "none" }};
+  vertical-align: {{ page.head.vertical_align | default: "initial" }};
+  text-align: {{ page.head.text_align | default: "initial" }};
+  line-height: {{ page.head.line_height | default: "initial" }};
+  padding: {{ page.head.padding | default: "0" }};
+  margin: {{ page.head.margin | default: "0" }};
 }
+
+#top {
+  box-sizing: border-box;
+  /* height: calc(23.34cm - 2.6in); */
+  width: {{ page.top.width | default: depth }};
+  height: {{ page.top.height | default: "auto" }};
+  border: {{page.top.border | default: "none" }};
+  background: {{ page.top.bg | default: "initial" }};
+  writing-mode: {{ page.top.writing_mode | default: "initial" }};
+  font-size: {{ page.top.font.size | default: "initial" }};
+  font-family: "{{ page.top.font.family | default: "serif" }}";
+  color: {{ page.top.color | default: "white" }};  
+  border: {{page.top.border | default: "none" }};
+  vertical-align: {{ page.top.vertical_align | default: "initial" }};
+  text-align: {{ page.top.text_align | default: "initial" }};
+  line-height: {{ page.top.line_height | default: "inherit" }};
+  padding: {{ page.top.padding | default: "0" }};
+  margin: {{ page.top.margin | default: "0" }};
+}
+
+#bottom {
+  box-sizing: border-box;
+  width: {{ page.bottom.width | default: depth }};
+  height: {{ page.bottom.height | default: "auto" }};
+  border: {{page.bottom.border | default: "none" }};
+  background: {{ page.bottom.bg | default: "initial" }};
+  writing-mode: {{ page.bottom.writing_mode | default: "initial" }};
+  font-size: {{ page.bottom.font.size | default: "initial" }};
+  font-family: "{{ page.bottom.font.family | default: "serif" }}";
+  color: {{ page.bottom.color | default: "white" }};  
+  border: {{page.bottom.border | default: "none" }};
+  vertical-align: {{ page.bottom.vertical_align | default: "initial" }};
+  text-align: {{ page.bottom.text_align | default: "initial" }};
+  line-height: {{ page.bottom.line_height | default: "inherit" }};
+  padding: {{ page.bottom.padding | default: "0" }};
+  margin: {{ page.bottom.margin | default: "0" }};
+}
+
 #foot {
-  background: black;
-  display: block;
-  vertical-align: middle;
-  font: initial;
-  font-family: sans-serif;
-  height: 0.8in;
-  writing-mode: vertical-rl;
-  text-align: center;
-  line-height: 3.4em;
-  width: 95%;
+  box-sizing: border-box;
+  width: {{ page.foot.width | default: depth }};
+  height: {{ page.foot.height | default: "auto" }};
+  border: {{page.foot.border | default: "none" }};
+  background: {{ page.foot.bg | default: "initial" }};
+  writing-mode: {{ page.foot.writing_mode | default: "initial" }};
+  font-size: {{ page.foot.font.size | default: "initial" }};
+  font-family: "{{ page.foot.font.family | default: "serif" }}";
+  color: {{ page.foot.color | default: "white" }};  
+  border: {{page.foot.border | default: "none" }};
+  vertical-align: {{ page.foot.vertical_align | default: "initial" }};
+  text-align: {{ page.foot.text_align | default: "initial" }};
+  line-height: {{ page.foot.line_height | default: "initial" }};
+  padding: {{ page.foot.padding | default: "0" }};
+  margin: {{ page.foot.margin | default: "0" }};
 }
 </style>
 
@@ -173,16 +204,17 @@ table {
     {{ page.width }}
   </td>
 </tr>
-<tr class="all" id="todo">
+<tr id="covers">
   <td class="face" id="back">
     {%- if page.back.img %}
     <img src="..{{page.back.img}}" alt="">
     {% endif -%}
     {{content}}</td>
   <td colspan=2 class="center"><table><tbody>
-    <tr><td id="title">{{page.title | default: "Title of the Book"}}</td></tr>
-    <tr><td id="auth">{{ page.author }}</td></tr>
-    <tr><td id="foot">{{ page.publisher }}</td></tr>
+    {% if page.head %}<tr><td id="head">{{ page.head.text }}</td></tr>{% endif %}
+    {% if page.top %}<tr><td id="top">{{ page.top.text | default: page.title }}</td></tr>{% endif %}
+    {% if page.bottom %}<tr><td id="bottom">{{ page.bottom.text | default: page.author }}</td></tr>{% endif %}
+    {% if page.foot %}<tr><td id="foot">{{ page.foot.text | default: page.publisher }}</td></tr>{% endif %}
   </tbody>
   </table>
   </td>
@@ -190,8 +222,10 @@ table {
     {%- if page.front.img %}
     <img src="..{{page.front.img}}" alt="">
     {% else %}
-    <h1>{{page.title}}</h1>
-    <h2>{{page.author}}</h2>
+    <div class="front-title">
+        <h1>{{page.title}}</h1>
+        <h2>{{page.author}}</h2>  
+    </div>
     {% endif -%}
   </td>
   <td id="siderule">{{page.height}}</td>
